Adapt app for Snowflake Streamlit deployment

--- a/proyecto_tinka_ml/proyecto_tinka_ml/requirements.txt
+++ b/proyecto_tinka_ml/proyecto_tinka_ml/requirements.txt
@@ -1,6 +1,9 @@
 pandas
 numpy
-mysql-connector-python
 matplotlib
 scipy
 SQLAlchemy
+mysql-connector-python
+streamlit
+snowflake-connector-python
+snowflake-snowpark-python
