--- a/proyecto_tinka_ml/proyecto_tinka_ml/environment.yml
+++ b/proyecto_tinka_ml/proyecto_tinka_ml/environment.yml
@@ -2,10 +2,10 @@ name: app_env
 channels:
   - snowflake
 dependencies:
-  - python=3.12
+  - python=3.11
   - streamlit
   - snowflake-snowpark-python
   - pandas
   - numpy
-  - matplotlib
+  - matplotlib=3.7.2
   - scipy
