Refactor project layout

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ streamlit
 pandas
 numpy
 matplotlib
+scipy
+SQLAlchemy
+mysql-connector-python
 snowflake-connector-python
+snowflake-snowpark-python
