Fix case sensitivity in repository name for push

--- a/.github/workflows/sync-to-hf.yml
+++ b/.github/workflows/sync-to-hf.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://jeanmarcocruz207:$HF_TOKEN@huggingface.co/spaces/jeanmarcocruz207/tinka_analytics main
+        run: git push https://jeanmarcocruz207:${HF_TOKEN}@huggingface.co/spaces/jeanmarcocruz207/Tinka_Analytics main
